--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "dompurify": "^3.3.0",
+    "jsdom": "^27.1.0",
     "marked": "^16.4.1",
     "next": "16.0.0",
     "react": "19.2.0",
